# phe_cuda

./: README.md  __about__.py  paillier.py  test_gpu_lib.py
gpu_lib/: CMakeLists.txt  gpu_lib.so.bak  powm_mulm.cu  test.py
